# blog-examples

./: .gitignore  01-os.py  02-pathlib.py  README.md  database.py  example.db  input.txt  logger.py  main.py  pyproject.toml  requirements.txt
src/: 01-requests.py  02-httpx.py
