[project]
name = "requests-vs-httpx"
version = "0.1.0"
description = "Sample code for my blog post discussing requests and httpx modules"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
